# elec-agent

./: CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
src/elec_agent/: __init__.py  agent.py  cli.py
src/elec_agent/parsers/: image_parser.py  image_parser_fixed.py  qet_parser.py
src/elec_agent/reporters/: pdf_report.py
src/elec_agent/rules/: engine.py  nfc15100.json  voltage_drop.py
src/elec_agent/rules/norms/: __init__.py  bs7671.py  iec60364.py  nec_nfpa70.py  nfc15100.py
tests/: test_rules.py
