[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elec-agent"
version = "0.1.0"
description = "Autonomous electrical schematic analyzer for NF C 15-100 compliance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pillow>=10",
    "pdfplumber>=0.11",
    "reportlab>=4",
    "ollama>=0.2",
    "openai>=1.30",
    "anthropic>=0.28",
    "pyyaml>=6",
    "httpx>=0.27",
]

[project.scripts]
elec-agent = "elec_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
